# MLScraper

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app.py  docker-compose.yml  manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  scrapper.py  stream.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
config/: jobs.yaml  jobs.yaml.example  motors.yaml  scrapper.yaml  telegram.yaml.example
docs/: ADDING_PROVIDER.md  AMAZON.md  ARCHITECTURE.md  CONFIGURATION.md  DATA_MODEL.md  LIVERPOOL.md  MERCADO_LIBRE.md  OPERATIONS.md  PALACIO_DE_HIERRO.md  TESTING.md
models/: Article.py  Category.py  Status.py
provider/: factories.py  generator.py  loader.py  registry.py
provider/amazon/: article.py  motor.py  options.py  urls.py  utils.py
provider/liverpool/: article.py  motor.py  options.py  urls.py
provider/mercado_libre/: article.py  motor.py  options.py  parser.py  search_utils.py  urls.py  utils.py
scraper/: article.py  fetchers.py  motor.py  status.py  stream.py
shared/: __init__.py
static/: Save.md  hola.html  index.html  notification.wav:Zone.Identifier  script.js  style.css
tests/: helpers.py  test_articles.py  test_config.py  test_fetchers.py  test_jobs.py  test_mercado_libre_pagination.py  test_motor_flow.py  test_notifications.py  test_on_hold_lifecycle.py  test_persistence.py  test_provider_parsers.py  test_threading_and_providers.py
utils/: file_manager.py  header_profiles.py  headers.py  telegram.py
(+25 files in other folders)
