[project]
name = "mlscraper"
version = "0.1.0"
description = "FastAPI product tracker and scraper for online stores."
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "beautifulsoup4==4.14.3",
    "lxml==6.1.0",
    "requests==2.33.1",
    "aiohttp==3.13.5",
    "pyyaml==6.0.3",
    "playwright==1.59.0",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
    "data",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = ["F"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
